Mobile version beer title align fix

--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 .card {
-  opacity : 0;
+  opacity: 0;
   width: 100%;
   height: 100%;
   display: flex;
@@ -102,7 +102,7 @@ body {
   object-fit: cover;
 }
 
-.container { 
+.container {
   align-self: center;
   display: flex;
   flex-direction: column;
@@ -161,6 +161,7 @@ body {
   }
   #beerName {
     font-size: 2rem;
+    text-align: center;
   }
   .card {
     height: 100vh;
